--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-phone-number-input": "^3.3.6",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
