--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.7.2",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-double-marquee": "^1.1.0",
     "react-hook-form": "^7.45.0",
     "react-phone-number-input": "^3.3.6",
     "react-router-dom": "^6.11.2",
