--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^4.6.0",
+    "jwt-decode": "^4.0.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -19,6 +21,7 @@
     "react-double-marquee": "^1.1.0",
     "react-hook-form": "^7.45.0",
     "react-phone-number-input": "^3.3.6",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
