date react_sneakers_diploma_project_progacademy-build.yaml

--- a/.github/workflows/react_sneakers_diploma_project_progacademy-build.yaml
+++ b/.github/workflows/react_sneakers_diploma_project_progacademy-build.yaml
@@ -32,6 +32,14 @@ jobs:
         with:
           node-version: v22.x
 
+      - name: Clear GitHub Actions cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Build Node assets
         env:
           CI: true
