--- a/.github/workflows/react_sneakers_diploma_project_progacademy-build.yaml
+++ b/.github/workflows/react_sneakers_diploma_project_progacademy-build.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: v22.x
+          node-version: '20'
           
       - name: Build Node assets
         env:
