--- a/.github/workflows/react_sneakers_diploma_project_progacademy-build.yaml
+++ b/.github/workflows/react_sneakers_diploma_project_progacademy-build.yaml
@@ -27,7 +27,7 @@ jobs:
         with:
           submodules: 'recursive'
 
-      - name: Setup Node
+      - name: Setup Node (Override for Deploy Action)
         uses: actions/setup-node@v4
         with:
           node-version: '20'
