--- a/.github/workflows/react_sneakers_diploma_project_progacademy-build.yaml
+++ b/.github/workflows/react_sneakers_diploma_project_progacademy-build.yaml
@@ -42,7 +42,7 @@ jobs:
 
 # Please do not touch the following action
       - name: Store deployment content
-        uses: ionos-deploy-now/artifact-action@v2
+        uses: ionos-deploy-now/artifact-action@latest
         with:
           api-key: ${{ secrets.IONOS_API_KEY }}
           service-host: api-us.ionos.space
