--- a/.github/workflows/react_sneakers_diploma_project_progacademy-build.yaml
+++ b/.github/workflows/react_sneakers_diploma_project_progacademy-build.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: v22.x
 
       - name: Build Node assets
         env:
