--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-double-marquee": "^1.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.0",
     "react-phone-number-input": "^3.3.6",
     "react-redux": "^8.1.3",
